cloud-based-personal-expense-tracker/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finops-prod
  labels:
    environment: production
    app: finops-tracker
