cloud-based-personal-expense-tracker/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finops-backend-svc
  namespace: finops-prod
  labels:
    app: backend
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: backend
  type: ClusterIP
